[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/story/ClassSelection.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/DialogueBox.tscn" id="2"]

[node name="ClassSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.08, 0.14, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 30.0
offset_right = -40.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Choose Your Discipline"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "Your training is complete. Which mentor will you follow?"
horizontal_alignment = 1

[node name="ClassGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 4
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16

[node name="DialogueBox" parent="." instance=ExtResource("2")]
layout_mode = 1
visible = false
